footer: fix wrong padding
after changing the global inner div padding

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -27,6 +27,9 @@
       }
     }
   }
+  > .inner {
+	@include padding(4em, 0);
+  }
 
   @include breakpoint(xsmall) {
     .copyright {
